--- a/front/src/App.css
+++ b/front/src/App.css
@@ -1,30 +1,28 @@
-/* #root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
-}
-
 .logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
+  background: linear-gradient(to right, #cfbcc3, #45839b); 
+  -webkit-text-fill-color: transparent; 
+  -webkit-background-clip: text;
+  font-weight:bolder;
+}
+body, html {
+  margin: 0;
+  padding: 0;
+  height: 100%;
 }
 
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-} */
-.App {
-
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  height: 100vh;
+#root {
+  min-height: 100vh; /* Ensure the React app container spans the full height */
   display: flex;
-  align-items: center;
-  justify-content: center;
-  color: rgba(255, 255, 255, 0.87);
+  flex-direction: column;
+}
+
+.main-content {
+  flex: 1; /* Allow main content to grow and fill available space */
+}
+
+.foot {
+  background-color: #333;
+  color: white;
+  text-align: center;
+  padding: 1rem;
 }
