--- a/front/src/index.css
+++ b/front/src/index.css
@@ -1,14 +1,3 @@
- :root {
-  /* 
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark; */
-  /* background-color: #242424; */
-/* 
-
- */
-
-  background-image: linear-gradient(to right, rgba(155, 104, 104, 0.7), rgba(111, 165, 190, 0.7));
-} 
-
+.Header {
+  background-color: #1e2a38;
+}
