--- a/front/src/App.css
+++ b/front/src/App.css
@@ -1,9 +1,12 @@
 .logo {
-  background: linear-gradient(to right, #cfbcc3, #45839b); 
-  -webkit-text-fill-color: transparent; 
+  background: linear-gradient(90deg, #5b71ec 0%, #a6c5f6 100%);
+  /* background: linear-gradient(to right, #cfbcc3, #45839b);  */
+  -webkit-text-fill-color: transparent;
+  background-clip: text;
   -webkit-background-clip: text;
   font-weight:bolder;
 }
+
 body, html {
   margin: 0;
   padding: 0;
@@ -11,13 +14,14 @@ body, html {
 }
 
 #root {
-  min-height: 100vh; /* Ensure the React app container spans the full height */
+  min-height: 100vh;
   display: flex;
   flex-direction: column;
 }
 
 .main-content {
-  flex: 1; /* Allow main content to grow and fill available space */
+  flex: 1;
+  padding: 2% 10%;
 }
 
 .foot {
